plan de travail

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
       </div>
     </header>
-    <img class="background" src="images/plandetravail1.png" alt="background"><!--position absolute-->
+    <img class="background" src="images/Plandetravail1.png" alt="background"><!--position absolute-->
     <div class="container_background"> <!--display flex-->
       <div class="mission">
         <h3>Votre mission</h3><!--Enlever le display line-->
